k8security-dashboard/kompose-deployment/trivy-scanner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: trivy-scanner
  name: trivy-scanner
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: trivy-scanner
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: trivy-scanner
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - |2
                while true; do
                  trivy k8s --format json -o results.json
                  sleep 86400;
                done
          image: aquasec/trivy:latest
          name: trivy-scanner-container
          volumeMounts:
            - mountPath: /root/.kube
              name: trivy-scanner-claim0
              readOnly: true
            - mountPath: /root/.cache/trivy
              name: trivy-cache
            - mountPath: /trivy_reports
              name: trivy-reports
      restartPolicy: Always
      volumes:
        - name: trivy-scanner-claim0
          persistentVolumeClaim:
            claimName: trivy-scanner-claim0
            readOnly: true
        - name: trivy-cache
          persistentVolumeClaim:
            claimName: trivy-cache
        - name: trivy-reports
          persistentVolumeClaim:
            claimName: trivy-reports
