k8security-dashboard/kompose-deployment/db-service.yaml
# db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    io.kompose.service: db
spec:
  type: ClusterIP
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
