k8security-dashboard/kompose-deployment/pgadmin-service.yaml
# pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
  selector:
    io.kompose.service: pgadmin
